--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 set (sources
   Example.cc
+  ign.cc
 )
 
 set (gtest_sources
@@ -12,3 +13,5 @@ set (gtest_sources
 ign_add_library(${PROJECT_NAME_LOWER}${PROJECT_MAJOR_VERSION} ${sources})
 ign_build_tests(${gtest_sources})
 ign_install_library(${PROJECT_NAME_LOWER}${PROJECT_MAJOR_VERSION})
+
+add_subdirectory(cmd)
