Use ignition common

--- a/examples/plugin/hello_plugin/CMakeLists.txt
+++ b/examples/plugin/hello_plugin/CMakeLists.txt
@@ -8,14 +8,19 @@ find_package (Qt5Core REQUIRED)
 
 # Find the Ignition gui library
 find_package(ignition-gui0 REQUIRED)
+find_package(ignition-common0 REQUIRED)
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${IGNITION-GUI_CXX_FLAGS}")
 
 include_directories(SYSTEM
+    ${IGNITION-COMMON_INCLUDE_DIRS}
     ${IGNITION-GUI_INCLUDE_DIRS}
     ${Qt5Core_INCLUDE_DIRS})
 
-link_directories(${IGNITION-GUI_LIBRARY_DIRS})
+link_directories(
+  ${IGNITION-COMMON_LIBRARY_DIRS}
+  ${IGNITION-GUI_LIBRARY_DIRS}
+)
 
 # Generate examples
 if (EXISTS "${CMAKE_SOURCE_DIR}/HelloPlugin.cc")
