beginning of plugin list, pending on a few proposals on ign-common

--- a/src/cmd/cmdgui.rb.in
+++ b/src/cmd/cmdgui.rb.in
@@ -45,6 +45,7 @@ COMMANDS = {  'gui' =>
                                                  "Give the plugin filename as an argument\n"       +
                        "  -c [ --config ] arg Open the main window with a configuration file." +
                                                  "Give the configuration file path as an argument\n"       +
+                       "  -v [ --verbose ] arg Adjust the level of console output (0~4).\n" +
                        COMMON_OPTIONS,
             }
 
@@ -78,6 +79,10 @@ class Cmd
       opts.on('-c config', '--config', String,
           'Load a configuration file') do |c|
         options['config'] = c
+      end
+      opts.on('-v verbose', '--verbose', String,
+          'Adjust level of console output') do |v|
+        options['verbose'] = v
       end
 
     end
@@ -138,6 +143,14 @@ class Cmd
     begin
       case options['command']
       when 'gui'
+
+        verbose = false
+        if options.key?('verbose')
+          Importer.extern 'void cmdVerbose(const char *)'
+          Importer.cmdVerbose(options['verbose'])
+          verbose = true
+        end
+
         if options.key?('list')
           Importer.extern 'void cmdPluginList()'
           Importer.cmdPluginList
@@ -147,6 +160,8 @@ class Cmd
         elsif options.key?('config')
           Importer.extern 'void cmdConfig(const char *)'
           Importer.cmdConfig(options['config'])
+        elsif verbose
+          puts 'Please use another command in conjunction with verbose.'
         else
           puts 'Command error: I do not have an implementation '\
                'for this command.'
