port time widget from gazebo

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set (sources
   ${CMAKE_CURRENT_SOURCE_DIR}/Iface.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/ign.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/MainWindow.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/widgets/Time.cc
   PARENT_SCOPE
 )
 
@@ -15,3 +16,6 @@ set (gtest_sources
 ign_build_tests(${gtest_sources})
 
 add_subdirectory(cmd)
+#add_subdirectory(interfaces)
+#add_subdirectory(plugins)
+#add_subdirectory(widgets)
