--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -1,9 +1,9 @@
 set (sources
-  ${CMAKE_CURRENT_SOURCE_DIR}/TimePlugin.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/PlayButtonPlugin.cc
   PARENT_SCOPE
 )
 
 set (sources_plugins
-  ${CMAKE_CURRENT_SOURCE_DIR}/TimePlugin.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/PlayButtonPlugin.cc
   PARENT_SCOPE
 )
