ign-transport dependency, install and find official plugins, example plugin ImageDisplay

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(IGN_PROJECT_NAME "gui")
 project (ignition-${IGN_PROJECT_NAME})
 string (TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWER)
 string (TOUPPER ${PROJECT_NAME} PROJECT_NAME_UPPER)
+string (REPLACE "-" "_" PROJECT_NAME_UPPER_NODASH ${PROJECT_NAME_UPPER})
 
 set (PROJECT_MAJOR_VERSION 0)
 set (PROJECT_MINOR_VERSION 1)
@@ -95,6 +96,7 @@ set (INCLUDE_INSTALL_DIR "${CMAKE_INSTALL_INCLUDEDIR}/ignition")
 set (LIB_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR})
 set (LIB_INSTALL_DIR_ARCH_INDEPENDENT "lib/")
 set (BIN_INSTALL_DIR ${CMAKE_INSTALL_BINDIR})
+set (IGN_GUI_PLUGIN_INSTALL_PATH ${CMAKE_INSTALL_PREFIX}/${LIB_INSTALL_DIR}/ign-${IGN_PROJECT_NAME}-${PROJECT_MAJOR_VERSION}/plugins)
 
 set (USE_FULL_RPATH OFF CACHE BOOL "Set to true to enable full rpath")
 
