fix running image display plugin standalone

--- a/examples/config/image.config
+++ b/examples/config/image.config
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 
-<plugin filename="libImageDisplay.so" name="Image display">
+<plugin filename="libImageDisplay.so">
   <topic_picker>false</topic_picker>
   <topic>/rendering/image</topic>
   <title>Without picker</title>
 </plugin>
 
-<plugin filename="libImageDisplay.so" name="Image display">
+<plugin filename="libImageDisplay.so">
   <title>With picker</title>
 </plugin>
