--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,7 +4,7 @@ pipelines:
   default:
     - step:
         script:
-          - apt install cmake
+          - apt install -y build-essential cmake qtbase5-dev libtinyxml2-dev
           - mkdir build
           - cd build
           - cmake ..
