--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,5 +5,10 @@ pipelines:
     - step:
         script:
           - apt update
-          - apt install -y build-essential cmake qtbase5-dev libtinyxml2-dev mercurial
+          - apt install -y build-essential cmake qtbase5-dev libtinyxml2-dev libignition-transport3 mercurial
           - hg clone http://bitbucket.org/ignitionrobotics/ign-common
+          - cd ign-common
+          - mkdir build
+          - cd build
+          - cmake ..
+          - make install
