--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,6 +4,8 @@ pipelines:
   default:
     - step:
         script:
+          - sh -c 'echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable `lsb_release -cs` main" > /etc/apt/sources.list.d/gazebo-stable.list'
+          - wget http://packages.osrfoundation.org/gazebo.key -O - | apt-key add -
           - apt update
           - apt install -y build-essential cmake qtbase5-dev libtinyxml2-dev libignition-transport3 mercurial
           - hg clone http://bitbucket.org/ignitionrobotics/ign-common
