--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,12 +6,13 @@ pipelines:
         script:
           - apt update
           - apt install -y build-essential wget cmake qtbase5-dev libtinyxml2-dev mercurial
-          - sh -c 'echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable `lsb_release -cs` main" > /etc/apt/sources.list.d/gazebo-stable.list'
-          - wget http://packages.osrfoundation.org/gazebo.key -O - | apt-key add -
-          - apt update
-          - apt install -y libignition-transport3
           - hg clone http://bitbucket.org/ignitionrobotics/ign-common
           - cd ign-common
+          - mkdir build
+          - cd build
+          - cmake ..
+          - make install
+          - cd ../..
           - mkdir build
           - cd build
           - cmake ..
