--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,7 +5,7 @@ pipelines:
     - step:
         script:
           - apt update
-          - apt install -y build-essential wget cmake qtbase5-dev libtinyxml2-dev mercurial
+          - apt install -y build-essential wget cmake qtbase5-dev libtinyxml2-dev libfreeimage-dev libgts-dev uuid-dev mercurial
           - hg clone http://bitbucket.org/ignitionrobotics/ign-common
           - cd ign-common
           - mkdir build
