msgs and transport

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,7 +5,8 @@ pipelines:
     - step:
         script:
           - apt update
-          - apt install -y build-essential wget cmake qtbase5-dev libtinyxml2-dev libfreeimage-dev libgts-dev uuid-dev libswscale-dev libavutil-dev libavcodec-dev libavformat-dev mercurial
+          - apt install -y build-essential wget cmake qtbase5-dev libtinyxml2-dev libfreeimage-dev libgts-dev uuid-dev libswscale-dev libavutil-dev libavcodec-dev libavformat-dev libprotoc-dev libprotobuf-dev libzmq3-dev mercurial
+          # Ignition math
           - hg clone http://bitbucket.org/ignitionrobotics/ign-math -b ign-math3
           - cd ign-math
           - mkdir build
@@ -13,6 +14,7 @@ pipelines:
           - cmake .. -DENABLE_TESTS_COMPILATION=false
           - make install
           - cd ../..
+          # Ignition common
           - hg clone http://bitbucket.org/ignitionrobotics/ign-common -b default
           - cd ign-common
           - mkdir build
@@ -20,6 +22,23 @@ pipelines:
           - cmake .. -DENABLE_TESTS_COMPILATION=false
           - make install
           - cd ../..
+          # Ignition msgs
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-msgs -b default
+          - cd ign-msgs
+          - mkdir build
+          - cd build
+          - cmake .. -DENABLE_TESTS_COMPILATION=false
+          - make install
+          - cd ../..
+          # Ignition transport
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-transport -b default
+          - cd ign-transport
+          - mkdir build
+          - cd build
+          - cmake .. -DENABLE_TESTS_COMPILATION=false
+          - make install
+          - cd ../..
+          # Ignition GUI
           - mkdir build
           - cd build
           - cmake ..
