--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,6 +4,9 @@ pipelines:
   default:
     - step:
         script:
+          # Static checking before building
+          - sh tools/code_check.sh
+          # Install dependencies
           - apt update
           - apt install -y build-essential wget cmake qtbase5-dev libtinyxml2-dev libfreeimage-dev libgts-dev uuid-dev libswscale-dev libavutil-dev libavcodec-dev libavformat-dev libprotoc-dev libprotobuf-dev libzmq3-dev protobuf-compiler mercurial
           # Ignition math
@@ -39,7 +42,6 @@ pipelines:
           - make install
           - cd ../..
           # Ignition GUI
-          - sh tools/code_check.sh
           - mkdir build
           - cd build
           - cmake ..
