--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,7 +6,7 @@ pipelines:
         script:
           # Install dependencies
           - apt update
-          - apt install -y build-essential wget cmake qtbase5-dev libtinyxml2-dev libfreeimage-dev libgts-dev uuid-dev libswscale-dev libavutil-dev libavcodec-dev libavformat-dev libprotoc-dev libprotobuf-dev libzmq3-dev protobuf-compiler mercurial
+          - apt install -y build-essential wget cmake qtbase5-dev libtinyxml2-dev libfreeimage-dev libgts-dev uuid-dev libswscale-dev libavutil-dev libavcodec-dev libavformat-dev libprotoc-dev libprotobuf-dev libzmq3-dev protobuf-compiler cppcheck mercurial
           # Static checking before building
           - sh tools/code_check.sh
           # Ignition math
