--- a/cmake/pkgconfig/ignition.in
+++ b/cmake/pkgconfig/ignition.in
@@ -5,6 +5,6 @@ includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@
 Name: Ignition @IGN_PROJECT_NAME@
 Description: A set of @IGN_PROJECT_NAME@ classes for robot applications
 Version: @PROJECT_VERSION_FULL@
-Requires:
-Libs: -L${libdir} -l@PROJECT_NAME_LOWER@
-CFlags: -I${includedir}
+Requires: Qt5Core Qt5Widgets
+Libs: -L${libdir} -l@PROJECT_NAME_LOWER@@PROJECT_MAJOR_VERSION@
+CFlags: -std=c++11 -I${includedir}
