--- a/include/ignition/gui/plugins/CMakeLists.txt
+++ b/include/ignition/gui/plugins/CMakeLists.txt
@@ -7,6 +7,7 @@ set (qt_headers_plugins ${qt_headers_plugins}
 
 set (qt_headers_local
   ImageDisplay
+  TimePanel
 )
 
 set(IGNITION_GUI_PLUGIN_INSTALL_DIR
@@ -18,7 +19,10 @@ foreach (src ${qt_headers_local})
   QT5_WRAP_CPP(${src}_MOC ${src}.hh)
   add_library(${src} SHARED ${PROJECT_SOURCE_DIR}/src/plugins/${src}.cc ${${src}_MOC})
   target_link_libraries(${src}
+    ${IGNITION-COMMON_LIBRARIES}
     ${IGNITION-GUI_LIBRARIES}
+    ${IGNITION-MSGS_LIBRARIES}
+    ${IGNITION-TRANSPORT_LIBRARIES}
     ${Qt5Core_LIBRARIES}
     ${Qt5Widgets_LIBRARIES})
   install (TARGETS ${src} DESTINATION ${IGNITION_GUI_PLUGIN_INSTALL_DIR})
