Topic Echo plugin, rev 1

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ set (plugin_sources
   ${CMAKE_CURRENT_SOURCE_DIR}/plugins/ImageDisplay.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/plugins/Publisher.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/plugins/TimePanel.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/plugins/TopicEcho.cc
   PARENT_SCOPE
 )
 
