--- a/examples/config/hello.config
+++ b/examples/config/hello.config
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 
-<plugin filename="libhello_plugin.so" name="hello_plugin">
-  <width>100</width>
-  <height>100</height>
-  <pos_x>10</pos_x>
-  <pos_y>10</pos_y>
+<plugin filename="libhello_plugin.so">
+</plugin>
+
+<plugin filename="libhello_plugin.so">
+  <has_titlebar>false</has_titlebar>
 </plugin>
