--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -47,7 +47,7 @@ add_subdirectory(plugins)
 ### Do not change the following
 
 set (ign_headers "" CACHE INTERNAL "Ignition headers" FORCE)
-foreach (hdr ${headers} ${qt_headers} ${qt_headers_plugins})
+foreach (hdr ${headers} ${qt_headers})
   APPEND_TO_CACHED_STRING(ign_headers
     "Ignition headers" "#include <ignition/${IGN_PROJECT_NAME}/${hdr}>\n")
 endforeach()
@@ -57,5 +57,4 @@ configure_file (${CMAKE_CURRENT_SOURCE_DIR}/ign_auto_headers.hh.in
 
 ign_install_includes("" ${CMAKE_CURRENT_BINARY_DIR}/${IGN_PROJECT_NAME}.hh)
 ign_install_includes(${IGN_PROJECT_NAME} ${headers} ${qt_headers})
-ign_install_includes(${IGN_PROJECT_NAME}/plugins ${qt_headers_plugins})
 
