trying out config in xml

--- a/examples/config/layout.config
+++ b/examples/config/layout.config
@@ -1,5 +1,13 @@
 <?xml version="1.0"?>
 
+<window>
+  <state>\0\0\0\xff\0\0\0\0\xfd\0\0\0\x1\0\0\0\x2\0\0\x3 \0\0\x4j\xfc\x1\0\0\0\x3\xfc\0\0\0\0\0\0\x1\x61\0\0\0~\0\xff\xff\xff\xfc\x2\0\0\0\x2\xfc\0\0\0\0\0\0\x2\xf5\0\0\0\xb7\0\xff\xff\xff\xfc\x2\0\0\0\x2\xfb\0\0\0\x2\0\x31\x1\0\0\0\0\0\0\x1x\0\0\0Y\0\xff\xff\xff\xfb\0\0\0\x2\0\x32\x1\0\0\x1}\0\0\x1x\0\0\0Y\0\xff\xff\xff\xfb\0\0\0\x2\0\x34\x1\0\0\x2\xfa\0\0\x1p\0\0\0Y\0\xff\xff\xff\xfb\0\0\0\x2\0\x35\x1\0\0\x1\x66\0\0\0\xad\0\0\0~\0\xff\xff\xff\xfb\0\0\0\x2\0\x33\x1\0\0\x2\x18\0\0\x1\b\0\0\0~\0\xff\xff\xff\0\0\x1\x84\0\0\0\0\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\0</state>
+  <position_x>2921</position_x>
+  <position_y>321</position_y>
+  <width>800</width>
+  <height>1130</height>
+</window>
+
 <plugin filename="libhello_plugin.so">
   <title>1</title>
   <orientation>horizontal</orientation>
