--- a/src/cmd/cmdgui.rb.in
+++ b/src/cmd/cmdgui.rb.in
@@ -97,10 +97,13 @@ class Cmd
       exit(-1)
     end
 
-    # Check that there is at least one command and there is a plugin that knows
-    # how to handle it.
-    if ARGV.empty? || !COMMANDS.key?(ARGV[0]) ||
-       options.empty?
+    # Handle empty window case (no arguments, perhaps only verbose)
+    if options.empty? || (options.key?('verbose') && options.length == 1)
+      options['emptywindow'] = ''
+    end
+
+    # Check that there is at least one command we can handle
+    if ARGV.empty? || !COMMANDS.key?(ARGV[0])
       puts usage
       exit(-1)
     end
@@ -164,6 +167,9 @@ class Cmd
         elsif options.key?('config')
           Importer.extern 'void cmdConfig(const char *)'
           Importer.cmdConfig(options['config'])
+        elsif options.key?('emptywindow')
+          Importer.extern 'void cmdEmptyWindow()'
+          Importer.cmdEmptyWindow()
         elsif verbose
           puts 'Please use another command in conjunction with verbose.'
         else
