Fix segfaults and add some icons

--- a/include/ignition/gui/plugins/CMakeLists.txt
+++ b/include/ignition/gui/plugins/CMakeLists.txt
@@ -70,6 +70,7 @@ add_library(${plot_qt_header} SHARED
   ${PROJECT_SOURCE_DIR}/src/plugins/TopicCurveHandler.cc
   ${PROJECT_SOURCE_DIR}/src/plugins/VariablePill.cc
   ${PROJECT_SOURCE_DIR}/src/plugins/VariablePillContainer.cc
+  ${PROJECT_SOURCE_DIR}/src/Conversions.cc
   ${PlotWindow_MOC}
   ${EditableLabel_MOC}
   ${ExportDialog_MOC}
