--- a/examples/config/spy.config
+++ b/examples/config/spy.config
@@ -3,5 +3,12 @@
 <plugin filename="libTopicViewer.so">
 </plugin>
 
+<plugin filename="libTopicEcho.so">
+</plugin>
+
+<plugin filename="libTopicsStats.so">
+</plugin>
+
 <plugin filename="libPlotWindow.so">
 </plugin>
+
