--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -10,6 +10,8 @@ set (CMAKE_AUTOMOC ON)
 add_definitions(${Qt5Core_DEFINITIONS})
 
 set (qt_headers
+  DragDropModel.hh
+  Enums.hh
   Iface.hh
   MainWindow.hh
   Plugin.hh
