option to start with widget, colors

--- a/examples/config/topicInterface.config
+++ b/examples/config/topicInterface.config
@@ -4,4 +4,13 @@
 </plugin>
 
 <plugin filename="TopicInterface">
+  <title>StringMsg on /echo</title>
+  <topic>/echo</topic>
+  <message_type>ignition.msgs.StringMsg</message_type>
+</plugin>
+
+<plugin filename="TopicInterface">
+  <title>SceneMsg on /scene</title>
+  <topic>/scene</topic>
+  <message_type>ignition.msgs.Scene</message_type>
 </plugin>
