--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ include_directories(${PROJECT_BINARY_DIR})
 
 set (sources
   ${CMAKE_CURRENT_SOURCE_DIR}/DragDropModel.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/Helpers.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/Iface.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/ign.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/MainWindow.cc
@@ -12,6 +13,7 @@ set (sources
 
 set (gtest_sources
   DragDropModel_TEST.cc
+  Helpers_TEST.cc
   Iface_TEST.cc
   MainWindow_TEST.cc
   SearchModel_TEST.cc
